--- a/src/index.html
+++ b/src/index.html
@@ -1309,6 +1309,67 @@
             </div>
         </section>
 
+        <section class="w-[90%] mx-auto flex flex-col gap-10 max-[510px]:mt-12">
+            <div class="hidden max-[510px]:block w-full my-10">
+                <img src="./images/image 100.png" alt="" class="w-full -mb-3">
+                <div class="p-3.5 flex flex-col gap-5 shadow-[0px_0px_5px_5px_#85939F4D] rounded-[10px] bg-white">
+                    <div class="flex items-center gap-2.5">
+                        <img src="./images/Group 3339.png" alt="">
+                        <p class="text-[14px]">+7 (800) 551-94-31 <br>
+                            +7 (495) 292-18-67</p>
+                    </div>
+                    <div class="flex items-center gap-2.5">
+                        <img src="./images/Group 3337.png" alt="">
+                        <p class="text-[14px]">с 08:00 до 21:00</p>
+                    </div>
+                    <div class="flex items-center gap-2.5">
+                        <img src="./images/Group 3338.png" alt="">
+                        <p class="text-[14px]">Россия, Москва, <br>
+                            38КМ МКАД, 6Бс1</p>
+                    </div>
+                    <button class="text-white bg-[#CA0100] h-[53px] w-full rounded-[5px]">Как до нас добраться</button>
+                </div>
+            </div>
+            <div
+                class="flex items-center gap-7.5 max-[510px]:border-b max-[510px]:border-b-[#C2C2C4] max-[510px]:w-[60%] max-[510px]:pb-5 max-[510px]:justify-between ">
+                <p class="text-[#CA0100] border-b-[3px] border-b-[#CA0100] pb-5 -mb-5">Автосалон</p>
+                <p>Трейд-ин</p>
+                <p>Покупка</p>
+            </div>
+            <div class="flex flex-col gap-5">
+                <h2 class="text-[40px]"><b>Об автосалоне ABC</b></h2>
+                <p class="text-[#737373]">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse pulvinar
+                    auctor tellus, id volutpat dui dictum vitae. Sed ac mauris nisi. Maecenas quis sollicitudin dolor,
+                    eget molestie dolor. Vivamus sed magna euismod, iaculis eros vitae, vehicula justo. Ut id consequat
+                    risus, vitae accumsan ligula. Proin egestas odio sit amet laoreet vulputate. Suspendisse vitae
+                    vestibulum quam. Vivamus lectus justo, bibendum at laoreet vel, rhoncus nec sem. Phasellus at mollis
+                    magna, in bibendum massa. Praesent malesuada sit amet nibh ut vestibulum. Interdum et malesuada
+                    fames ac ante ipsum primis in faucibus. Nulla iaculis a orci sit amet iaculis. Nulla in magna
+                    posuere nunc pharetra faucibus. Phasellus id enim libero.</p>
+            </div>
+        </section>
+
+        <section class="w-[96%] mx-auto h-[550px] relative -mb-20 -z-1 mt-20 max-[510px]:hidden">
+            <img src="./images/image 1.png" alt="" class="w-full rounded-[25px_25px_0_0] h-full">
+            <article class="p-3.5 flex flex-col gap-5 shadow-[0px_0px_5px_5px_#85939F4D] w-[401px] h-[258px] absolute z-1 right-20 top-30 rounded-[10px] bg-white">
+                <div class="flex items-center gap-2.5">
+                    <img src="./images/Group 3339.png" alt="">
+                    <p class="text-[14px]">+7 (800) 551-94-31 <br>
+                        +7 (495) 292-18-67</p>
+                </div>
+                <div class="flex items-center gap-2.5">
+                    <img src="./images/Group 3337.png" alt="">
+                    <p class="text-[14px]">Ежедневно с 08:00 до 21:00</p>
+                </div>
+                <div class="flex items-center gap-2.5">
+                    <img src="./images/Group 3338.png" alt="">
+                    <p class="text-[14px]">Россия, Москва, 
+                        38КМ МКАД, 6Бс1</p>
+                </div>
+                <button class="text-white bg-[#CA0100] h-[53px] w-[244px] rounded-[5px]">Как до нас добраться</button>
+            </article>
+        </section>
+
 
 </body>
 
