--- a/index.html
+++ b/index.html
@@ -121,8 +121,9 @@
     <main>
 
         <section>
-            <div
-                class="cars w-[97%] h-[70vh] max-sm:h-[90vh] bg-[url(./images/background_1.png)] bg-no-repeat bg-cover mt-5 ml-[1.5%] rounded-[25px]">
+            <div 
+            style="background-image: url(./images/background_1.png);"
+                class="cars w-[97%] h-[70vh] max-sm:h-[90vh]  bg-no-repeat bg-cover mt-5 ml-[1.5%] rounded-[25px]">
                 <img src="./images/Group 349.png" alt="" class="absolute left-4 top-100 max-sm:hidden">
                 <div class="all flex items-center">
 
@@ -394,7 +395,9 @@
                 <div
                     class="all py-[2%] pl-[1.5%] flex w-[33%] max-sm:hidden shadow-[0px_0px_10px_rgba(0,0,0,0.3)] h-[72vh] mb-5 rounded-3xl">
 
-                    <div class="auto w-full h-[40vh] bg-[url(./images/1059.png)] bg-cover bg-no-repeat pr-[4%]">
+                    <div
+                    style="background-image: url(./images/1059.png);"
+                     class="auto w-full h-[40vh] bg-cover bg-no-repeat pr-[4%]">
                         <div class="skoda flex items-start justify-between">
                             <h3 class="text-3xl font-bold mb-3 w-70">Skoda Octavia 1.6 MPI MT Active </h3>
                             <div class="img flex gap-4">
@@ -460,7 +463,9 @@
                 <div
                     class="all py-[2%] pl-[1.5%] flex w-[33%] max-sm:hidden shadow-[0px_0px_10px_rgba(0,0,0,0.3)] h-[72vh] mb-5 rounded-3xl">
 
-                    <div class="auto w-full h-[40vh] bg-[url(./images/1059.png)] bg-cover bg-no-repeat pr-[4%]">
+                    <div
+                    style="background-image: url(./images/1059.png);"
+                     class="auto w-full h-[40vh] bg-cover bg-no-repeat pr-[4%]">
                         <div class="skoda flex items-start justify-between">
                             <h3 class="text-3xl font-bold mb-3 w-70">Skoda Octavia 1.6 MPI MT Active </h3>
                             <div class="img flex gap-4">
@@ -527,7 +532,8 @@
                     class="all py-[2%] pl-[1.5%] flex w-[33%] max-sm:w-full shadow-[0px_0px_10px_rgba(0,0,0,0.3)] h-[72vh] max-sm:h-[85vh] mb-5 rounded-3xl">
 
                     <div
-                        class="auto w-full h-[40vh] bg-[url(./images/1059.png)] bg-cover bg-no-repeat pr-[4%] max-sm:pl-[3%] max-sm:pt-2">
+                    style="background-image: url(./images/1059.png);"
+                        class="auto w-full h-[40vh] bg-cover bg-no-repeat pr-[4%] max-sm:pl-[3%] max-sm:pt-2">
                         <div class="skoda flex items-start justify-between">
                             <h3 class="text-3xl font-bold mb-3 w-70">Skoda Octavia 1.6 MPI MT Active </h3>
                             <div class="img flex gap-4">
@@ -598,7 +604,9 @@
                 <div
                     class="all py-[2%] pl-[1.5%] flex w-[33%] shadow-[0px_0px_10px_rgba(0,0,0,0.3)] h-[72vh] mb-5 rounded-3xl">
 
-                    <div class="auto w-full h-[40vh] bg-[url(./images/1059.png)] bg-cover bg-no-repeat pr-[4%]">
+                    <div
+                    style="background-image: url(./images/1059.png);"
+                     class="bg-cover bg-no-repeat pr-[4%]">
                         <div class="skoda flex items-start justify-between">
                             <h3 class="text-3xl font-bold mb-3 w-70">Skoda Octavia 1.6 MPI MT Active </h3>
                             <div class="img flex gap-4">
@@ -664,7 +672,9 @@
                 <div
                     class="all py-[2%] pl-[1.5%] flex w-[33%] shadow-[0px_0px_10px_rgba(0,0,0,0.3)] h-[72vh] mb-5 rounded-3xl">
 
-                    <div class="auto w-full h-[40vh] bg-[url(./images/1059.png)] bg-cover bg-no-repeat pr-[4%]">
+                    <div
+                    style="background-image: url(./images/1059.png);"
+                     class="bg-cover bg-no-repeat pr-[4%]">
                         <div class="skoda flex items-start justify-between">
                             <h3 class="text-3xl font-bold mb-3 w-70">Skoda Octavia 1.6 MPI MT Active </h3>
                             <div class="img flex gap-4">
@@ -730,7 +740,9 @@
                 <div
                     class="all py-[2%] pl-[1.5%] flex w-[33%] shadow-[0px_0px_10px_rgba(0,0,0,0.3)] h-[72vh] mb-5 rounded-3xl">
 
-                    <div class="auto w-full h-[40vh] bg-[url(./images/1059.png)] bg-cover bg-no-repeat pr-[4%]">
+                    <div
+                    style="background-image: url(./images/1059.png);"
+                     class="bg-cover bg-no-repeat pr-[4%]">
                         <div class="skoda flex items-start justify-between">
                             <h3 class="text-3xl font-bold mb-3 w-70">Skoda Octavia 1.6 MPI MT Active </h3>
                             <div class="img flex gap-4">
@@ -820,7 +832,8 @@
 
             <div class="flex items-center justify-between mt-14 max-[510px]:mt-7">
                 <div
-                    class="bg-[url(./images/rectangle_438.png)] bg-no-repeat bg-cover w-[32%] rounded-[8px] h-[40vh] max-[510px]:w-[100%]">
+                style="background-image: url(./images/Rectangle_438.png);"
+                    class="bg-no-repeat bg-cover w-[32%] rounded-[8px] h-[40vh] max-[510px]:w-[100%]">
                     <div class="flex justify-between px-8 pt-60 max-[510px]:pt-50">
                         <p class="w-[20px] text-white font-bold">Семейные
                             автомобили</p>
@@ -829,7 +842,8 @@
                     </div>
                 </div>
                 <div
-                    class="bg-[url(./images/rectangle_440.png)] bg-no-repeat bg-cover w-[32%] rounded-[8px] h-[40vh] max-[510px]:hidden">
+                style="background-image: url(./images/Rectangle_440.png);"
+                    class="bg-no-repeat bg-cover w-[32%] rounded-[8px] h-[40vh] max-[510px]:hidden">
                     <div class="flex justify-between px-8 pt-60">
                         <p class="w-[150px] text-white font-bold">Автомобили для путешествий</p>
                         <button
@@ -837,7 +851,8 @@
                     </div>
                 </div>
                 <div
-                    class="bg-[url(./images/rectangle_439.png)] bg-no-repeat bg-cover w-[32%] rounded-[8px] h-[40vh] max-[510px]:hidden">
+                style="background-image: url(./images/Rectangle_439.png);"
+                    class="bg-no-repeat bg-cover w-[32%] rounded-[8px] h-[40vh] max-[510px]:hidden">
                     <div class="flex justify-between px-8 pt-60">
                         <p class="w-[20px] text-white font-bold">Семейные
                             автомобили</p>
@@ -893,6 +908,7 @@
 
             <div class="flex items-center justify-between mt-14 max-[510px]:mt-7">
                 <div
+                style="background-image: url(./images/Mask_1.png);"
                     class="bg-[url(./images/Mask_1.png)] bg-no-repeat bg-cover bg-[position:70%_30%] w-[32%] rounded-[8px] h-[35vh] max-[510px]:w-[100%]">
                     <div class="px-8 pt-10 max-[510px]:pt-10">
                         <p class="w-[220px] text-[#262626] font-bold text-[20px] font-bold">Первый
@@ -905,7 +921,8 @@
                     </div>
                 </div>
                 <div
-                    class="bg-[url(./images/mask2.png)] bg-no-repeat bg-cover bg-[position:70%_35%] w-[32%] rounded-[8px] h-[35vh] max-[510px]:hidden relative">
+                style="background-image: url(./images/mask2.png);"
+                    class="bg-no-repeat bg-cover bg-[position:70%_35%] w-[32%] rounded-[8px] h-[35vh] max-[510px]:hidden relative">
                     <div class="px-8 pt-10 max-[510px]:pt-10">
                         <p class="w-[250px] text-[#262626] font-bold text-[20px] font-bold">Семейный
                             автомобиль</p>
@@ -917,7 +934,8 @@
                     </div>
                 </div>
                 <div
-                    class="bg-[url(./images/Mask_3.png)] bg-[position:70%_35%] bg-no-repeat bg-cover w-[32%] rounded-[8px] h-[35vh] max-[510px]:hidden">
+                style="background-image: url(./images/Mask_3.png);"
+                    class="bg-[position:70%_35%] bg-no-repeat bg-cover w-[32%] rounded-[8px] h-[35vh] max-[510px]:hidden">
                     <div class="px-8 pt-10 max-[510px]:pt-10">
                         <p class="w-[220px] text-[#262626] font-bold text-[20px] font-bold">
                             Экспресс-кредит</p>
@@ -1351,7 +1369,8 @@
 
         <section class="w-[96%] mx-auto h-[550px] relative -mb-20 -z-1 mt-20 max-[510px]:hidden">
             <img src="./images/image 1.png" alt="" class="w-full rounded-[25px_25px_0_0] h-full">
-            <article class="p-3.5 flex flex-col gap-5 shadow-[0px_0px_5px_5px_#85939F4D] w-[401px] h-[258px] absolute z-1 right-20 top-30 rounded-[10px] bg-white">
+            <article
+                class="p-3.5 flex flex-col gap-5 shadow-[0px_0px_5px_5px_#85939F4D] w-[401px] h-[258px] absolute z-1 right-20 top-30 rounded-[10px] bg-white">
                 <div class="flex items-center gap-2.5">
                     <img src="./images/Group 3339.png" alt="">
                     <p class="text-[14px]">+7 (800) 551-94-31 <br>
@@ -1363,7 +1382,7 @@
                 </div>
                 <div class="flex items-center gap-2.5">
                     <img src="./images/Group 3338.png" alt="">
-                    <p class="text-[14px]">Россия, Москва, 
+                    <p class="text-[14px]">Россия, Москва,
                         38КМ МКАД, 6Бс1</p>
                 </div>
                 <button class="text-white bg-[#CA0100] h-[53px] w-[244px] rounded-[5px]">Как до нас добраться</button>
